# codegen-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: enum.rs  function.rs  lib.rs  variant.rs
tests/: codegen.rs
