[package]
name = "codegen-rs"
# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "vX.Y.Z" git tag.
version = "0.1.4"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>", "Filippo Costa <filippo.costa@protonmail.com>"]
description = "Library for generating Rust code"
documentation = "https://docs.rs/codegen-rs/"
homepage = "https://github.com/neysofu/codegen-rs"
repository = "https://github.com/neysofu/codegen-rs"
readme = "README.md"
edition = "2018"

[dependencies]
indexmap = "1.0.2"
